[workspace]

members = [
    "kscale/rust",
]
resolver = "2"

[workspace.package]

version = "0.1.2"
authors = ["K-Scale Labs <ben@kscale.dev>"]
edition = "2021"
description = "K-Scale Labs Rust crate"
license = "MIT"
repository = "https://github.com/kscalelabs/kscale"
documentation = "https://docs.kscale.dev/cli"
readme = "README.md"
