[package]

name = "kscale"

version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]

name = "kscale"
crate-type = ["cdylib", "rlib"]

[dependencies]

pyo3 = { version = ">= 0.21.0", features = ["extension-module"] }
pyo3-stub-gen = ">= 0.6.0"
